En proceso de arreglar problemas generados por conflictos en Dropbox con symlinks

--- a/escrito/urge10.tex
+++ b/escrito/urge10.tex
@@ -59,7 +59,7 @@
 
 % Restrictive rules in the Chilean Cámara: Fighting floor amendments with urgency authority
 
-\title{The president's Fast Track authority: No accelerator but a shield against plenary amendments in the Chilean Cámara\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. The authors are responsible for mistakes and shortcomings.}}
+\title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. The authors are responsible for mistakes and shortcomings.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
         Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
@@ -139,6 +139,50 @@
 % 9. FEE: cotejar la propuesta original vs el reporte primero, para evaluar la discreción del committee chair. También, contar historia de uno o dos bills como ejemplo de perro que ladra/no. 
 %
 % 10. FEE. Controlar margen de victoria en el pleno.
+
+
+
+%% DE VALERIA
+
+%% (b) pedirle a un RA que haga una investigación rápida (creo recordar que el reglamento no es muy explícito) para entender la práctica de introducción de indicaciones, en general,
+
+%% No conseguí RA porque es época de exámenes, pero esto es lo que pude ver yo. Hay 55 referencias a indicaciones en el reglamento, así que esto intenta resumir lo más importante:
+%% - El reglamento de 2015 (el único sobre el cual hay claridad al momento) establece que el Presidente de la cámara puede declarar inadmisible las indicaciones (art 55.2).
+%% - Aparte, los proyectos que formen parte de la tabla de Despacho Inmediato no podrán ser objeto de indicaciones y serán sometidos a una sola votación.
+%% - En los proyectos incluidos en la tabla de Fácil Despacho las indicaciones presentadas serán tratadas una vez aprobado el proyecto en general, pero no se aceptarán indicaciones en materias de la Comisión de Hacienda, esas indicaciones serán enviadas a la Comisión de Hacienda. Las indicaciones se pueden presentar hasta el momento antes de que se vote el último artículo que se trate en particular.
+%% - Si no hay indicaciones, la aprobación en general incluye la aprobación en particular del proyecto.
+%% - Durante la discusión general el Presidente de la República y los diputados pueden introducir indicaciones.
+%% - Bastará que un comité solicite plazo para formular indicaciones para que sea otorgado, no pudiendo el plazo ser inferior a un día.
+%% - Se someterán a discusión en particular las indicaciones que, rechazadas en el segundo informe, sean renovadas por el Pdte de la República o por dos jefes de comités.
+%% - Se llama también "indicaciones" a las mociones para reabrir el debate y otras mociones.
+%% - No se admiten indicaciones que alteren gastos por parte de diputados. Sólo se admitirán si emanan del Pdte de la Rep.
+%% - Sí si disminuyen gastos.
+%% - Cuando se trate de proyectos con suma urgencia o discusión inmediata sólo serán aceptadas indicaciones rechazadas por las comisiones informantes si son respaldadas por la firma de 30 diputados que incluyan al menos a 3 jefes de comités, siempre que se trate de las que fueron presentadas en la discusión en general o dentroo del plazo fijado por la cámara.
+%% - El pdte de la cámara es quien puede declarar inadmisibles indicaciones.
+
+%% y si alguien además del presidente puede imponer closed rule---ie, prescindir de la segunda lectura---en particular. 
+
+%% Todos los proyectos incluidos en la tabla de Fácil Despacho no tienen segundo informe de comisión. Son proyectos de poca importancia. Todos los órdenes del día tienen tabla de fácil despacho. Pero la mesa que decide qué entra en esta tabla tendría esa prerrogativa, y podría "estirar" su uso. 
+
+%% Creo mencionar un una nota a pie un recurso de la biblioteca del congreso que resume bien la práctica parlamentaria. 
+
+%% No consulté esto, mi única fuente fue el Reglamento 2015. 
+
+
+%% 2. Sigue también pendiente encontrar una versión del reglamento de la cámara anterior a 2010 para verificar si la closed rule antes aplicaba sólo a la suma urgencia.
+
+%% Adjunto memo sobre reglamento 2015 que tiene, al principio, todas las enmiendas al reglamento. Después, un resumen de todo lo que se dice en el Reglamento acerca de las urgencias. Las reformas, para hacer lo mismo hacia atrás, son muchas, habría que ver cuáles nos interesan. Eric, si tienes en mente una en particular, dime cuál. Le encargaré a un RA hacer el seguimiento de los artículos que yo identifiqué en el Regla 2015 hacia atrás, pero es un trabajo tremendo así que si lo podemos acotar, mejor.
+
+%% 3. Algunas ideas para un nuevo título que aluda a Relic:
+
+%% -Presidents with fast track authority: Fighting floor amendments in the Chilean Cámara
+%% -Presidential fast track authority: More a Previous Question than a privileged motion
+%% -Not faster/Not an accelerator but a shield against plenary amendments
+%% -Not a car pool lane but a cloture of highway exits
+%% -Presidents with fast track authority cannot accelerate
+%% -Not an accelerator, a take-it-or-leave-it rule
+
+%% Estamos en contacto, le mando besos.
 
 \onehalfspacing
 
