--- a/gesValeriaEric/paper/urge10.tex
+++ b/gesValeriaEric/paper/urge10.tex
@@ -57,7 +57,7 @@
 
 \begin{document}
 
-\title{Restrictive rules in the Chilean Cámara: Fighting floor amendments with urgency authority\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. The authors are responsible for mistakes and shortcomings in the study.}}
+\title{President's Fast Track Authority: In Chile, Not Too Fast, but a Shield Against Amendments\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign.  The authors are responsible for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
         Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
@@ -68,8 +68,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent Among the formidable proactive legislative powers of Chile's president is urgency authority. Lawmakers face a short deadline to discuss and vote bills declared urgent. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper underscores a procedural distinction of this institution that scholars have overlooked: the floor considers urgent bills under \emph{restrictive rules}, giving presidents the ability to shield committee reports from floor amendments. Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. We provide significant evidence that urgency use associates with the type of restrictive rule correlates found in the United States.
-\end{abstract}
+\noindent Among the formidable proactive legislative powers of Chile's president is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper shows that the main reason behind the use of fast track authority is not to speed legislation, but instead to give presidents the ability to shield bills from floor amendments. Presidents' fast track authority is similar to a "close rule". Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. \end{abstract}
 
 % comentarios de Calvo
 %Comentarios a Magar: Presidential obstruction of the agenda in Chile’s Congress
@@ -83,6 +82,7 @@
 
 % Adriana Alfaro
 % En Chile se llama urgencia, en Mx iniciativa preferente. Cómo se llama en Colombia etc? La lectura semántica quizás sesgó la interpretación de Morgenstern y cia.
+
 % R: No parece ser el caso, sólo en México no lleva el mote de 'urgente'.
 %    Colombia = manifestación de urgencia
 %    México   = iniciativa preferente
@@ -110,6 +110,7 @@
 %% Por último, algunas posibles extensiones que tal vez sea mejor discutir en otros trabajos, pero podrían mencionar en la conclusión:
 %
 %% 5. No me quedó clara la diferencia entre poder de urgencia y poderes de decreto, especialmente cuando hay aprobación automática (e.g., Uruguay). Pero si el presidente puede legislar por decreto, ¿el pleno no tiene que elegir entre el decreto tal como está, o introducirle algo? O sea, ¿el decreto no funciona también como una closed rule? No lo digo por el caso chileno, pero sí para pensar cómo comparar con otros países.
+%R (gisela); el decreto es mas fuerte que todo lo que conocemos.  Hasta el fast track authority the Howell y Moe tiene que ser aprobado por el Congreso, pero en Argentina por ejmeplo, los decretos no estan reglamentados y no necesitan ser aprobados por el congreso.  Otra cosa: la gran diferencia seria si los decretos se analizan en comision o no.  En Chile, la comision puede introducir todos los cambios que quiere (y creo que es asi en Brazil, no?) . No se si es asi en Argentina. Este close rule en Chile defiende el bill de amendments no negociadas con el presidente de la comision (que pueden venir de facciones del partido/coalicion gobernante, o de la oposicion). 
 %
 %% 6. ¿El modelo genera algún otro tipo de predicciones? Ustedes están mirando declaración de urgencia, ¿pero es posible predecir qué proyectos deberían morir en el comité, cuáles deberían ser aprobados por el pleno, cuáles recibir enmiendas, etc? Si no es posible predecirlo (o no tienen los datos para evaluar las predicciones), deberían explicar por qué en el paper. Se me hace que muchos reviewers les van a salir con eso.
 %
@@ -118,11 +119,12 @@
 
 
 % Otros comentarios de la charla en el itam
-% 1. Jeff: In US, committee reports original bill and amendments separately, each voted. In Mexico, committee reports its own version. Is it the same in Chile? EMM: Yes, methinks. FEE: Look at original executive proposals and what the committee reports, to see how much change there was.
+% 1. Jeff: In US, committee reports original bill and amendments separately, each voted. 	NOT TRUE: REPORTS A BILL DEPENDING ON HOW WAS THE FINAL OUTCOME WITH THE VOTES ON THE AMENDMENTS. IN THE RPORT OF COURSE IT MAKES A SUMMARY OF THE DENATE, THE AMENDMENTS, THE VOTING, WHO OTED FOR WHAT, ETC.  VERY SIMILAR TO CHILE. In Mexico, committee reports its own version. Is it the same in Chile? EMM: Yes, methinks. FEE: Look at original executive proposals and what the committee reports, to see how much change there was. GS: HAHA THAT'S A LOT, LOT OF WORK 
 %
-% 2. FEE/Adrián: analize exv bills urgent since the beginning vs those declared urgent later. Should hint at how restrictive rules become necessary as exv makes concessions in original bill...
+% 2. FEE/Adrián: analize exv bills urgent since the beginning vs those declared urgent later. Should hint at how restrictive rules become necessary as exv makes concessions in original bill... 
+% GS: WHAT DO YOU THINK ABOUT THIS? NOT SURE HOW IT WOULD MATTER, BUT NOT IN THAT WAY. THE RESTRICTION DOE SNOT COUNT FOR COMMITTEES. BUT THE DIFFERENCE SHOULD BE INTERESTING: WHY SOME HAVE URGENCY SINCE THE BEGGINNING? I IMAGINE IT HAS TO DO WITH A SIGNAL FROM THE EXECUTIVE: THE BILL IS IMPORTANT, AND I AM WILLING TO SHIELDED FORM AMENDMENTS IN THE FLOOR IF YOUDO NOT MODIFY IT MUCH. OR MAYBE SOMETHING LIKE: THIS IS IMPORTANT TO ME, I'M WILLING TO NEGOTIATE
 %
-% 3. Vidal: discuss why the institution is so much used and has survived so long. Also: why aren't all exv bills urgent? (R: if comm introduced changes, P may want floor to ``correct'' them.
+% 3. Vidal: discuss why the institution is so much used and has survived so long. Also: why aren't all exv bills urgent? (R: if comm introduced changes, P may want floor to ``correct'' them. 
 %
 % 4. FEE: Senate, where opp sometimes controlled, seem more attractive test. 
 %
@@ -131,6 +133,7 @@
 % 6. Adrián: recode para que en caso de multiple referral, coalChair=1 sólo si todos son de coalición.
 %
 % 7. Multiple referrals: simultáneos o secuenciales? Cómo opera el gatekeeping?
+% GS: ACCORDING TO SOTO, SE PUEDEN MANDAR PROYECTOS A UNA O MAS COMISIONES, QUE PUEDEN ACTUAR SEPARADAS O UNIDAS. , O TAMBIEN PUEDE ENCONMENDARSE A UNA COMISION ESPECIAL.  (TODO ESTO ES DEICISION DEL PRESIDENTE DE LA CAMARA)  SI SON SEPARADAS,  PUEDE HABER UNA COMISION PRIMARIA, QUE SI APRUEBA EL PROYECTO ENTONCES SE TRATA EN EL PLENARIO. SI LA COMISION SECUNDARIA NO APRUEBA ELPROYECTO, IGUAL PUEDE IR AL PLENO.  PERO TAMBIEN SE PUEDE ENVIAR UN PROYECTO A COMISIONES UNIDAS: ESTO ES, LAS COMISIONES TIENEN QUE REUNIRSE JUNTAS Y TRATAR EL PROYECTO DE LEY . CON ESTO ULTIMO BASICAMENTE SE MATA EL PROYECTO.
 % 
 % 8. Simpser: policy area descriptives, need to show that result is not this rather than committee chair. Check speed controllingthis, too.
 %
@@ -142,7 +145,9 @@
 
 \section{Introduction}
 
-\noindent The prerogative to declare bills urgent gives the president power to interfere with congress' voting schedule. Presidents with such power can impose legislators with a deadline to discuss and vote legislation by simply designating a bill ``urgent''. Seen against presidential systems like the U.S., where an impatient president has no formal resources to pressure legislators to act on stagnant legislation, urgency authority seems contradictory to classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}.
+\noindent Fast track authority gives presidents the power to set the agenda by imposing a requirement to hold a vote on a bill within a certain period of time, allowing the president to interfere with congress' voting schedule. More specifically, by simply designating a bill ``urgent'' Presidents  can impose legislators with a deadline to discuss and vote legislation. Seen against presidential systems like the U.S., where an impatient president has no formal resources to pressure legislators to act on stagnant legislation, urgency authority seems contradictory to classic notions of separation of powers. In Federalist 47, Madison argues that the ``magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law'' \citep{madison.47}.
+\ges{here we need to make a footnote on the US, that in the US that doe snot apply for cases where Congress gave the president fast track authority, which has been mostly for Trade agreements with other nations}
+
 
 \ges{Not happy about this quote yet, but I think is more appropriate than the previous one.  We need something about separation of powers.
     The Framers warn against expediting lawmaking and arresting deliberation. ``In the legislature promptitude of decision is oftener an evil than a benefit'' \citep{hamilton70.1788}.
@@ -153,7 +158,10 @@
 % Upon the principles of a free government, inconveniences from the source just mentioned [collective actors] must necessarily be submitted to in the formation of the legislature; but it is unneccessary, and therefore unwise, to introduce them into the constitution of the executive. It is here too that they may be most pernicious. In the legislature promptitude of decision is oftener an evil than a benefit. The differences of opinion and the jarring of parties in that department of the government, though they may sometimes obstruct salutary plans, yet often promote deliberation and circumspection, and serve to check the excesses of the majority. When a resolution too is once taken, the opposition must be at an end. That resolution is a law, and resistance to it is punishable. --> EMM la urgencia opera contra esta delibaración benévola...
 % federalist 47 "The magistrate in whom the whole executive power resides cannot of himself make a law, though he can put a negative on every law" 
 
-Yet, five constitutions of the Americas give presidents such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. In Brazil, the president can declare any executive-initiated bill urgent at any time. The assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. In Colombia, urgent bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the urgent bill into law. \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.}  In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
+Yet, five constitutions of the Americas give presidents such authority: Brazil, Chile, Colombia, Mexico, and Uruguay \citep{morgenstern.2002b}. 
+\ges{Soto dice que Ecuador, Paraguay y Dominicana tienen poderes de urgencia tambien, y ita Base de Datos Politicos de las Americas (2008) de Georgetown University.
+
+In Brazil, the president can declare any executive-initiated bill urgent at any time. The assembly must act on urgent legislation within forty five days, else the bill in question takes precedence over all other legislative business. In Colombia, urgent bills go to the top of the voting schedule immediately, and all activity on the floor stops until legislators vote on the bill. In Uruguay, legislators must act within a pre-specified, short period of time, as failure to do so converts the urgent bill into law. \footnote{Although three-fifths of the membership of either chamber can remove the bill's urgent status.}  In Mexico, the president can propose up to two urgent bills at the start of each biannual ordinary period, which must be scheduled for floor consideration within 30 days.\footnote{Constitutional articles vesting this authority are the following: Brazil articles 62 and 64; Chile article 74; Colombia article 163; Mexico article 71; and Uruguay article 168.7.}
 
 \emm{How does this compare with special (extra-ordinary) sessions? Some presidents can summon legislators to a special session to discuss, exclusively, a specific bill defined ex-ante. Limits? If few, might resemble urgency authority... Check.}
 \vp{WILL LOOK INTO THIS}
