Saves prior to adding apparent chenges in ges valeria version

--- a/escrito/urge10.tex
+++ b/escrito/urge10.tex
@@ -28,7 +28,7 @@
 
 \newcommand{\mc}{\multicolumn}
 
-%% TO ADD NOTES IN TEXT, PUT % BEFORE THE ONE YOU WANT DISBALED
+%% TO ADD NOTES IN TEXT, PUT % BEFORE THE ONE YOU WANT DISABLED
 %\usepackage[disable]{todonotes}                            % notes not showed
 \usepackage[colorinlistoftodos, textsize=small]{todonotes} % show notes
 \newcommand{\emm}[1]{\todo[color=red!15, inline]{\textbf{Eric:} #1}}
@@ -59,7 +59,7 @@
 
 % Restrictive rules in the Chilean Cámara: Fighting floor amendments with urgency authority
 
-\title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. The authors are responsible for mistakes and shortcomings.}}
+\title{Presidents on the fast track: Fighting floor amendments in the Chilean Cámara\thanks{An earlier version was read at the 2017 annual meeting of the American Political Science Association, San Francisco, CA. The authors are grateful to Roberto Bustos, Alvaro Villarroel, and the staff of the Senate's Hacienda committee, and especially to Sebastián Soto Velasco for help understanding urgency authority; to Deputy Patricio Vallespín for making the calls that scheduled interviews with key congressional personnel; to Mónica Arretche, Ernesto Calvo, José Antonio Cheibub, Federico Estévez, Adrián Lucardi, and Michelle Taylor-Robinson for comments and critiques. Eric Magar acknowledges financial support from the Asociación Mexicana de Cultura A.C.\ and CONACYT's Sistema Nacional de Investigadores. Valeria Palanza acknowledges support from Proyecto Fondecyt No. 1140974, and from the Millennium Nucleus for the Study of Stateness and Democracy in Latin America, Project \#NS100014. Gisela Sin acknowledges the support of Office of the Vice Chancellor for Research and the Center for Latin American Studies, University of Illinois at Urbana-Champaign. The authors are responsible for mistakes and shortcomings in the study.}}
 \author{Eric Magar \\ ITAM \and
         Valeria Palanza \\ Univ.\ Católica de Chile \and  
         Gisela Sin \\ Univ.\ of Illinois, Urbana-Champaign 
@@ -70,7 +70,7 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent Among the formidable proactive legislative powers of Chile's president is urgency authority. Lawmakers face a short deadline to discuss and vote bills declared urgent. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper underscores a procedural distinction of this institution that scholars have overlooked: the floor considers urgent bills under \emph{restrictive rules}, giving presidents the ability to shield committee reports from floor amendments. Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. We provide significant evidence that urgency use associates with the type of restrictive rule correlates found in the United States.
+\noindent Among the formidable proactive legislative powers of Chile's president is fast-track authority, also called urgency authority. Lawmakers face a short deadline to discuss and vote bills in this track. Extant research has shown that most executive proposals become urgent at some stage, that urgency correlates with the odds of passage, but found little evidence that it speeds consideration of the president's agenda in Congress. This paper underscores a procedural distinction of this institution that scholars have overlooked: the floor considers urgent bills under \emph{restrictive rules}, giving presidents the ability to shield committee reports from floor amendments. Hypotheses derived from a formal model of restrictive rules are tested with data from the 1998--2014 period. We provide significant evidence that urgency use associates with the type of restrictive rule correlates found in the United States.
 \end{abstract}
 
 % comentarios de Calvo
@@ -184,7 +184,7 @@
 
 %% Estamos en contacto, le mando besos.
 
-\onehalfspacing
+\doublespacing
 
 \section{Introduction}
 
@@ -1038,7 +1038,7 @@ El proyecto deberá ser despachado por la Cámara en tres días [...]
 \textbf{La discusión de estos proyectos se hará en general y particular a la vez. No serán sometidos a segundo informe.}})
 
 
-\onehalfspacing
+\doublespacing
 
 \emm{Urge encontrar el texto de estos artículos del reglamento antes de la reforma de 2010, para verificar la duda acerca de la discusión inmediata...}
 
